force-app/main/default/objects/Contact/fields/AccountCreationDate__c.field-meta.xml
<CustomField>
    <fullName>AccountCreationDate__c</fullName>
    <description>Date the account for contact was created</description>
    <formula>Account.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Creation Date</label>
    <type>Date</type>
</CustomField>