force-app/main/default/objects/Contact/fields/ActiveHealthLicenseFlag__c.field-meta.xml
<CustomField>
    <fullName>ActiveHealthLicenseFlag__c</fullName>
    <description>This field is used to indicate if Agent is Active. Consider only records set to &apos;Y&apos;.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Active Health License Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>