force-app/main/default/objects/Contact/fields/AddressLine2__c.field-meta.xml
<CustomField>
    <fullName>AddressLine2__c</fullName>
    <description>Address Line 2</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>