force-app/main/default/objects/Contact/fields/AgencyOrOrganization__c.field-meta.xml
<CustomField>
    <fullName>AgencyOrOrganization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to store Agency or organization associated with assister or agent or auth rep</description>
    <label>Agency Or Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AgencyOrOrganization</relationshipLabel>
    <relationshipName>AgencyOrOrganization</relationshipName>
    <type>Lookup</type>
</CustomField>