force-app/main/default/objects/Contact/fields/AgentId__c.field-meta.xml
<CustomField>
    <fullName>AgentId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>AgentId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>