force-app/main/default/objects/Contact/fields/AssociatedCountyCode__c.field-meta.xml
<CustomField>
    <fullName>AssociatedCountyCode__c</fullName>
    <description>This field to filter records based on applicable county codes from CountyZipCodeAssociation table.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Associated County Code</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>