force-app/main/default/objects/Contact/fields/CacheBenefitMedicaidEBTData__c.field-meta.xml
<CustomField>
    <fullName>CacheBenefitMedicaidEBTData__c</fullName>
    <description>MedicaidEBT information from Benefits call out will store here</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CacheBenefitMedicaidEBTData</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>