force-app/main/default/objects/Contact/fields/CacheBenefitProgramData__c.field-meta.xml
<CustomField>
    <fullName>CacheBenefitProgramData__c</fullName>
    <description>Field to store Benefit Program Data</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cache Benefit Program Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>