force-app/main/default/objects/Contact/fields/CacheDashboardData__c.field-meta.xml
<CustomField>
    <fullName>CacheDashboardData__c</fullName>
    <description>Field to store dashboard data</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cache Dashboard Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>