force-app/main/default/objects/Contact/fields/CacheKIHIPPSummary__c.field-meta.xml
<CustomField>
    <fullName>CacheKIHIPPSummary__c</fullName>
    <description>DAshboard data for KIHIPP Summary flag</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>DAshboard data for KIHIPP Summary flag</inlineHelpText>
    <label>CacheKIHIPPSummary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>