force-app/main/default/objects/Contact/fields/CaseOwnership__c.field-meta.xml
<CustomField>
    <fullName>CaseOwnership__c</fullName>
    <description>This field is used to store Case Owner Role.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CaseOwnership</label>
    <length>255</length>
    <type>Text</type>
</CustomField>