force-app/main/default/objects/Contact/fields/ClientDetails_MockReponse__c.field-meta.xml
<CustomField>
    <fullName>ClientDetails_MockReponse__c</fullName>
    <label>ClientDetails_MockReponse</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>