force-app/main/default/objects/Contact/fields/CompletedFirstTime__c.field-meta.xml
<CustomField>
    <fullName>CompletedFirstTime__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether user has completed first time login</description>
    <label>Completed first time login screen</label>
    <type>Checkbox</type>
</CustomField>