force-app/main/default/objects/Contact/fields/ConsentToTexts__c.field-meta.xml
<CustomField>
    <fullName>ConsentToTexts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Account Details and Verbal Consent Text Update - TCPA</description>
    <label>ConsentToTexts</label>
    <type>Checkbox</type>
</CustomField>