force-app/main/default/objects/Contact/fields/ContactGeoLocation__c.field-meta.xml
<CustomField>
    <fullName>ContactGeoLocation__c</fullName>
    <description>This field is used to capture the lat long field for the citizen user</description>
    <label>Contact Geo Location</label>
    <scale>8</scale>
    <type>Location</type>
</CustomField>