force-app/main/default/objects/Contact/fields/CountyCode__c.field-meta.xml
<CustomField>
    <fullName>CountyCode__c</fullName>
    <description>County</description>
    <label>County</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SSPCounty</valueSetName>
    </valueSet>
</CustomField>