force-app/main/default/objects/Contact/fields/CPUser__c.field-meta.xml
<CustomField>
    <fullName>CPUser__c</fullName>
    <formula>$Profile.Name = &apos;RE Community Partner User Profile&apos;</formula>
    <label>CP User?</label>
    <type>Checkbox</type>
</CustomField>