force-app/main/default/objects/Contact/fields/DCACRId__c.field-meta.xml
<CustomField>
    <fullName>DCACRId__c</fullName>
    <description>This field is used to identify the unique ACR record for an external system</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>DCACRId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>