force-app/main/default/objects/Contact/fields/DCAddressId__c.field-meta.xml
<CustomField>
    <fullName>DCAddressId__c</fullName>
    <description>DC mapping Id of an Address</description>
    <externalId>true</externalId>
    <label>DCAddressId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>