force-app/main/default/objects/Contact/fields/DCDataId__c.field-meta.xml
<CustomField>
    <fullName>DCDataId__c</fullName>
    <description>This field is used to store  DoiAgentId or AgencyEmployeeId or ExternalOrganizationEmployeeId coming from worker portal</description>
    <externalId>true</externalId>
    <label>DCDataId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>