force-app/main/default/objects/Contact/fields/DoesAuthRepHasOrg__c.field-meta.xml
<CustomField>
    <fullName>DoesAuthRepHasOrg__c</fullName>
    <description>toggle question to ask for further details for organization for auth rep</description>
    <label>Does Auth Rep work for organization?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>