force-app/main/default/objects/Contact/fields/DoesCaseExistForIndividual__c.field-meta.xml
<CustomField>
    <fullName>DoesCaseExistForIndividual__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to be updated from dashboard if any case data is returned for Dashboard API call.</description>
    <label>Does Case Exist For Individual</label>
    <type>Checkbox</type>
</CustomField>