force-app/main/default/objects/Contact/fields/DoiInsurerId__c.field-meta.xml
<CustomField>
    <fullName>DoiInsurerId__c</fullName>
    <description>This field is used to store Lookup Id for below association tables.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>DoiInsurerId</label>
    <length>4</length>
    <type>Text</type>
</CustomField>