force-app/main/default/objects/Contact/fields/GenderCode__c.field-meta.xml
<CustomField>
    <fullName>GenderCode__c</fullName>
    <description>Gender of a Contact</description>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SSPGender</valueSetName>
    </valueSet>
</CustomField>