force-app/main/default/objects/Contact/fields/HoursAvailableCode__c.field-meta.xml
<CustomField>
    <fullName>HoursAvailableCode__c</fullName>
    <description>availability of an agent to work on Case</description>
    <label>Hours Available Code</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>M</fullName>
                
                
                    <label>Weekday - Morning</label>
                
                </value>
            
                <value>
                
                    <fullName>D</fullName>
                
                
                    <label>Weekday - Afternoon</label>
                
                </value>
            
                <value>
                
                    <fullName>E</fullName>
                
                
                    <label>Weekday - Evening</label>
                
                </value>
            
                <value>
                
                    <fullName>W</fullName>
                
                
                    <label>Weekends</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>