force-app/main/default/objects/Contact/fields/IndividualCertificationEndDate__c.field-meta.xml
<CustomField>
    <fullName>IndividualCertificationEndDate__c</fullName>
    <description>This field is used to Indicates Agent certification end date. Consider records with year of enddate equal to year of current date or greater.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Individual Certification End Date</label>
    <type>DateTime</type>
</CustomField>