force-app/main/default/objects/Contact/fields/IndividualId__c.field-meta.xml
<CustomField>
    <fullName>IndividualId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Individual Id of a Contact</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>IndividualId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>