force-app/main/default/objects/Contact/fields/InHousePrivateAssister__c.field-meta.xml
<CustomField>
    <fullName>InHousePrivateAssister__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field indicates if Assister is Private. For Private Assisters value is set to 1.</description>
    <label>In House Private Assister</label>
    <type>Checkbox</type>
</CustomField>