force-app/main/default/objects/Contact/fields/InsuranceCompany__c.field-meta.xml
<CustomField>
    <fullName>InsuranceCompany__c</fullName>
    <description>Insurance Company Name</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Insurance Company</label>
    <type>TextArea</type>
</CustomField>