force-app/main/default/objects/Contact/fields/InsurerName__c.field-meta.xml
<CustomField>
    <fullName>InsurerName__c</fullName>
    <description>This field is used to store Name of Insurance Company.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Insurer Name</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>