force-app/main/default/objects/Contact/fields/Is_Eligible_For_RSSPDC__c.field-meta.xml
<CustomField>
    <fullName>Is_Eligible_For_RSSPDC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to Identify if the user is eligible for Reverse SSP-DC</description>
    <label>Is Eligible For RSSPDC</label>
    <type>Checkbox</type>
</CustomField>