force-app/main/default/objects/Contact/fields/Is_Platform_Event__c.field-meta.xml
<CustomField>
    <fullName>Is_Platform_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if origin is platform event</description>
    <label>Is Platform Event</label>
    <type>Checkbox</type>
</CustomField>