force-app/main/default/objects/Contact/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <description>This field is indicate a flag for an active assistors</description>
    <encryptionScheme>None</encryptionScheme>
    <label>IsActive</label>
    <length>1</length>
    <type>Text</type>
</CustomField>