force-app/main/default/objects/Contact/fields/IsClaim__c.field-meta.xml
<CustomField>
    <fullName>IsClaim__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field stores whether the contact is created as a part of claim site request</description>
    <label>IsClaim</label>
    <type>Checkbox</type>
</CustomField>