force-app/main/default/objects/Contact/fields/IsDashboardRefreshNeeded__c.field-meta.xml
<CustomField>
    <fullName>IsDashboardRefreshNeeded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>flag to identify if dashboard refresh is required and interface calls to be made.</description>
    <label>Is Dashboard Refresh Needed</label>
    <type>Checkbox</type>
</CustomField>