force-app/main/default/objects/Contact/fields/IsManualAuthRep__c.field-meta.xml
<CustomField>
    <fullName>IsManualAuthRep__c</fullName>
    <defaultValue>false</defaultValue>
    <description>flag set to true for auth reps added manually in SSP. This will be false for auth reps added via day 0 data load.</description>
    <label>Is Manual Auth Rep</label>
    <type>Checkbox</type>
</CustomField>