force-app/main/default/objects/Contact/fields/IsSearchEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsSearchEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Agent is registered. Registered Agent, if set to &apos;1&apos; else not registered.</description>
    <label>Is search enabled</label>
    <type>Checkbox</type>
</CustomField>