force-app/main/default/objects/Contact/fields/KOGSourceId__c.field-meta.xml
<CustomField>
    <fullName>KOGSourceId__c</fullName>
    <description>KOGSourceId__c</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>KOGSourceId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>