force-app/main/default/objects/Contact/fields/Last_RSSPDC_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Last_RSSPDC_DateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last RSSPDC DateTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>