force-app/main/default/objects/Contact/fields/Last_RSSPDC_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Last_RSSPDC_Timestamp__c</fullName>
    <description>Field to populate last Reverse SSPDC Timestamp</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last RSSPDC Timestamp</label>
    <type>DateTime</type>
</CustomField>