force-app/main/default/objects/Contact/fields/MailingLine2__c.field-meta.xml
<CustomField>
    <fullName>MailingLine2__c</fullName>
    <description>This field is used to store address line 2</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing Line2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>