force-app/main/default/objects/Contact/fields/MailingZipcode4__c.field-meta.xml
<CustomField>
    <fullName>MailingZipcode4__c</fullName>
    <description>This field is used to store field for zipcode 4</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing Zipcode4</label>
    <length>10</length>
    <type>Text</type>
</CustomField>