force-app/main/default/objects/Contact/fields/MemberType__c.field-meta.xml
<CustomField>
    <fullName>MemberType__c</fullName>
    <description>This field is used to check if logged in user is HOH or Dependent.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>MemberType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>