force-app/main/default/objects/Contact/fields/Needs__c.field-meta.xml
<CustomField>
    <fullName>Needs__c</fullName>
    <label>My Needs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Domain</valueSetName>
    </valueSet>
</CustomField>