force-app/main/default/objects/Contact/fields/NPN__c.field-meta.xml
<CustomField>
    <fullName>NPN__c</fullName>
    <description>This field is used to store Agent Unique number.</description>
    <label>NPN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>