force-app/main/default/objects/Contact/fields/OptOutComm__c.field-meta.xml
<CustomField>
    <fullName>OptOutComm__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether user has opted out of communications</description>
    <label>Opt Out of Email/Text Communications</label>
    <type>Checkbox</type>
</CustomField>