force-app/main/default/objects/Contact/fields/OptOutInfoSharing__c.field-meta.xml
<CustomField>
    <fullName>OptOutInfoSharing__c</fullName>
    <description>Indicates whether user has opted out of sharing information with CP users</description>
    <formula>Account.HasOptedOutOfAccount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opt Out of Information Sharing</label>
    <type>Checkbox</type>
</CustomField>