force-app/main/default/objects/Contact/fields/OrganizationName__c.field-meta.xml
<CustomField>
    <fullName>OrganizationName__c</fullName>
    <description>Organization Name of a Contact</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Organization Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>