force-app/main/default/objects/Contact/fields/OrgranizationIdentificationNumber__c.field-meta.xml
<CustomField>
    <fullName>OrgranizationIdentificationNumber__c</fullName>
    <description>Organization Identification Number</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Organization ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>