force-app/main/default/objects/Contact/fields/PermissionsLevel__c.field-meta.xml
<CustomField>
    <fullName>PermissionsLevel__c</fullName>
    <description>What level of permission the team member has</description>
    <label>Permissions Level</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Admin</fullName>
                
                
                    <label>Admin</label>
                
                </value>
            
                <value>
                
                    <fullName>Staff</fullName>
                
                
                    <label>Staff</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>