force-app/main/default/objects/Contact/fields/PhoneType__c.field-meta.xml
<CustomField>
    <fullName>PhoneType__c</fullName>
    <label>Phone Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>PhoneTypeCode</valueSetName>
        
        </valueSet>
</CustomField>