force-app/main/default/objects/Contact/fields/PreferredCommunicationMethod__c.field-meta.xml
<CustomField>
    <fullName>PreferredCommunicationMethod__c</fullName>
    <description>Preferred communication method for resident contact.</description>
    <label>Preferred Method</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Email</fullName>
                
                
                    <label>Email</label>
                
                </value>
            
                <value>
                
                    <fullName>Mobile Phone</fullName>
                
                
                    <label>Mobile Phone</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>