force-app/main/default/objects/Contact/fields/PreferredLanguageCode__c.field-meta.xml
<CustomField>
    <fullName>PreferredLanguageCode__c</fullName>
    <description>Shows the list of preferred languages</description>
    <label>Preferred Language</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>SpokenLanguage</valueSetName>
        
        </valueSet>
</CustomField>