force-app/main/default/objects/Contact/fields/PrimaryLocation__c.field-meta.xml
<CustomField>
    <fullName>PrimaryLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary location assocaited with contact</description>
    <label>Primary Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>