force-app/main/default/objects/Contact/fields/PrimaryPhoneExtension__c.field-meta.xml
<CustomField>
    <fullName>PrimaryPhoneExtension__c</fullName>
    <description>Primary Phone Extension of a Contact</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Primary Phone Extension</label>
    <length>10</length>
    <type>Text</type>
</CustomField>