force-app/main/default/objects/Contact/fields/RepresentativeRelationshipCode__c.field-meta.xml
<CustomField>
    <fullName>RepresentativeRelationshipCode__c</fullName>
    <description>How is this person related to you ?</description>
    <label>How is this person related to you?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>RepresentativeRelationship</valueSetName>
        
        </valueSet>
</CustomField>