force-app/main/default/objects/Contact/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>This field is used to store Role of the user. Consider only records with &apos;Individual Authorized Representative&apos; or &apos;Organization Authorized Representative&apos;.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Role</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>