force-app/main/default/objects/Contact/fields/SpokenLanguageCode__c.field-meta.xml
<CustomField>
    <fullName>SpokenLanguageCode__c</fullName>
    <description>This field is used to store spoken language</description>
    <label>Spoken Language Code</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>SpokenLanguage</valueSetName>
        
        </valueSet>
</CustomField>