force-app/main/default/objects/Contact/fields/SSN__c.field-meta.xml
<CustomField>
    <fullName>SSN__c</fullName>
    <description>Social Security Number</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Social Security Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>