force-app/main/default/objects/Contact/fields/SSP_State__c.field-meta.xml
<CustomField>
    <fullName>SSP_State__c</fullName>
    <description>State code of Contact</description>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>SSPState</valueSetName>
        
        </valueSet>
</CustomField>