force-app/main/default/objects/Contact/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>State</valueSetName>
        
        </valueSet>
</CustomField>