force-app/main/default/objects/Contact/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>Street of a contact address</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>