force-app/main/default/objects/Contact/fields/TrainingLevel__c.field-meta.xml
<CustomField>
    <fullName>TrainingLevel__c</fullName>
    <description>What levels of training the team member has</description>
    <label>Training Level</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Complete</fullName>
                
                
                    <label>Complete</label>
                
                </value>
            
                <value>
                
                    <fullName>Not Complete</fullName>
                
                    <default>true</default>
                
                    <label>Not Complete</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>