force-app/main/default/objects/Contact/fields/UserEndDate__c.field-meta.xml
<CustomField>
    <fullName>UserEndDate__c</fullName>
    <description>This field is used to store End date of AuthRep. Consider records with &apos;Null&apos; or date greater than current date.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>User End Date</label>
    <type>Date</type>
</CustomField>