force-app/main/default/objects/Contact/fields/UWContactId__c.field-meta.xml
<CustomField>
    <fullName>UWContactId__c</fullName>
    <description>External Id for the Object</description>
    <externalId>true</externalId>
    <label>UWContactId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>