force-app/main/default/objects/Contact/fields/Visited_Document_Center__c.field-meta.xml
<CustomField>
    <fullName>Visited_Document_Center__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visited Document Center</label>
    <type>Checkbox</type>
</CustomField>