force-app/main/default/objects/Contact/fields/Zipcode4__c.field-meta.xml
<CustomField>
    <fullName>Zipcode4__c</fullName>
    <description>Four digit Zip Code</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Zip Code (Four Digit)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>