force-app/main/default/objects/Contact/fields/Zipcode5__c.field-meta.xml
<CustomField>
    <fullName>Zipcode5__c</fullName>
    <description>Five digit Zip Code</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Zip Code (Five Digit)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>