force-app/main/default/objects/Contact/fields/ZipCode__c.field-meta.xml
<CustomField>
    <fullName>ZipCode__c</fullName>
    <label>Zip Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>