force-app/main/default/objects/Contact/recordTypes/Agency_User.recordType-meta.xml
<RecordType>
    <fullName>Agency_User</fullName>
    <active>true</active>
    <description>This Record type is used for Agency Users(Admins/staff)</description>
    <label>Agency User</label>
</RecordType>