force-app/main/default/objects/Contact/recordTypes/Assister.recordType-meta.xml
<RecordType>
    <fullName>Assister</fullName>
    <active>true</active>
    <description>assistor contact record</description>
    <label>Assister</label>
</RecordType>