force-app/main/default/objects/Contact/recordTypes/Auth_Rep.recordType-meta.xml
<RecordType>
    <fullName>Auth_Rep</fullName>
    <active>true</active>
    <description>Authorized representative</description>
    <label>Auth Rep</label>
</RecordType>