force-app/main/default/objects/Contact/recordTypes/Citizen.recordType-meta.xml
<RecordType>
    <fullName>Citizen</fullName>
    <active>true</active>
    <description>This Record type is used for Residents</description>
    <label>Citizen</label>
</RecordType>