force-app/main/default/objects/Contact/recordTypes/CPUserContact.recordType-meta.xml
<RecordType>
    <fullName>CPUserContact</fullName>
    <active>true</active>
    <description>This record type used for CP user</description>
    <label>CP User Contact</label>
</RecordType>